# rayzor

./: CMakeLists.txt  LICENSE  Level.cpp  Level.h  Line.cpp  Line.h  README.md  Ray.h  TileMap.h  Wall.h  enemy.cpp  enemy.h  entitiy.h  helper.cpp  helper.h  main.cpp  main.h
lvls/: map1.walls  map1_1.csv  map1_2.csv  map2.lights  map2.walls  map2_1.csv  map2_2.csv  map2_3.csv  map3.lights  map3.walls  map3_1.csv  map3_2.csv  map3_3.csv  map4.lights  map4.walls  map4_1.csv  map4_2.csv
res/levels/: 1.tmx  2.tmx  3.tmx  4.tmx
